[package]
name = "runcfg-rs"
version = "1.0.0"
authors = ["Aaron Colwill <git@runcfg.com>"]
license = "MIT"
edition = "2021"
homepage = "https://runcfg.com"
repository = "github.com/runcfg/runcfg-rs"
description = "runcfg rust client library"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.122"
reqwest = { version = "0.12.5", features = ["blocking"] }